test/subjects/errors/bad_hint_array.php
<?php

	function f (array $x = 6) // { phc-error: Default value for parameters with array type hint can only be an array or NULL }
	{
	}
?>
